Fixing a mobile spacing issue.  Removing unnecessary css.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,3 @@
 .mainContent {
-   padding:  20px 30px 10px 40px;
+   padding:  40px 30px;
 }
