--- a/src/app/card-list/card-list.component.scss
+++ b/src/app/card-list/card-list.component.scss
@@ -5,9 +5,7 @@
   }
   .card-containter{
     text-align: left;
-    margin:0 auto;
     .project-card{
-      max-width: 300px;
       margin-bottom: 10px;
     }
   }
